--- a/style.css
+++ b/style.css
@@ -74,6 +74,12 @@ main {
 .cursor {
   cursor: pointer;
 }
+.options {
+  border: 2px solid black;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  padding: 10px;
+}
 #text {
     left: 20px;
     right: 20px;
